--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "crcns"]
 	path = crcns
 	url = ./crcns
+[submodule "dicoms"]
+	path = dicoms
+	url = ./dicoms
 [submodule "labs"]
 	path = labs
 	url = ./labs
