--- a/.gitmodules
+++ b/.gitmodules
@@ -72,3 +72,8 @@
 	path = datalad
 	url = ./datalad
 	datalad-id = eb75f620-b951-11e9-a91d-002590f97d84
+[submodule "hcp-openaccess"]
+	path = hcp-openaccess
+	url = https://github.com/datalad-datasets/human-connectome-project-openaccess
+	branch = master
+	datalad-id = 2e2a8a70-3eaa-11ea-a9a5-b4969157768c
