--- a/.datalad/.gitattributes
+++ b/.datalad/.gitattributes
@@ -1,3 +1,4 @@
 config annex.largefiles=nothing
 metadata/aggregate* annex.largefiles=nothing
 metadata/objects/** annex.largefiles=(largerthan=20kb)
+tests/** annex.largefiles=nothing
