--- a/.datalad/.gitattributes
+++ b/.datalad/.gitattributes
@@ -2,3 +2,4 @@ config annex.largefiles=nothing
 metadata/aggregate* annex.largefiles=nothing
 metadata/objects/** annex.largefiles=(largerthan=20kb)
 tests/** annex.largefiles=nothing
+utils/** annex.largefiles=nothing
