--- a/.gitmodules
+++ b/.gitmodules
@@ -93,3 +93,7 @@
 	path = naturalistic-data
 	url = ./naturalistic-data
 	datalad-id = 860e55aa-c5eb-11ea-91b5-002590f97d84
+[submodule "psychoinformatics-de"]
+	path = psychoinformatics-de
+	url = ./psychoinformatics-de
+	datalad-id = a6dac302-c61f-11ea-9622-002590f97d84
