--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,7 @@
 	path = psychoinformatics-de
 	url = ./psychoinformatics-de
 	datalad-id = a6dac302-c61f-11ea-9622-002590f97d84
+[submodule "dandisets"]
+	path = dandisets
+	url = https://github.com/dandi/dandisets
+	datalad-id = 79aeddc4-7870-4351-b778-11f63c201edc
