--- a/.gitmodules
+++ b/.gitmodules
@@ -101,3 +101,7 @@
 	path = dandi
 	url = ./dandi
 	datalad-id = 767154cb-1cef-4ee3-a4d3-ed5c0e949613
+[submodule "shub"]
+	path = shub
+	url = http://datasets.datalad.org/shub/.git
+	datalad-id = ef409c52-40a3-41bf-8e83-72fdefdf01e2
