[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,4 @@
 	path = studyforrest
 	url = https://github.com/psychoinformatics-de/studyforrest-data
 	datalad-id = deabeb9b-7a37-4062-a1e0-8fcef7909609
+	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data
