--- a/.gitmodules
+++ b/.gitmodules
@@ -111,3 +111,7 @@
 	url = https://github.com/psychoinformatics-de/studyforrest-data
 	datalad-id = deabeb9b-7a37-4062-a1e0-8fcef7909609
 	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data
+[submodule "psychoinformatics-de"]
+	path = psychoinformatics-de
+	url = ./psychoinformatics-de
+	datalad-id = a6dac302-c61f-11ea-9622-002590f97d84
