--- a/.gitmodules
+++ b/.gitmodules
@@ -119,3 +119,7 @@
 	path = dandi
 	url = ./dandi
 	datalad-id = 767154cb-1cef-4ee3-a4d3-ed5c0e949613
+[submodule "dandi"]
+	path = dandi
+	url = ./dandi
+	datalad-id = 767154cb-1cef-4ee3-a4d3-ed5c0e949613
