openneuro: progress datasets forward

--- a/.gitmodules
+++ b/.gitmodules
@@ -116,3 +116,7 @@
 [submodule "workshops"]
 	path = workshops
 	url = https://datasets.datalad.org/workshops/.git
+[submodule "openneuro"]
+	path = openneuro
+	url = ./openneuro
+	datalad-id = 2ecbb6ba-f811-11e8-b1ed-002590f97d84
